--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
-  "prettier.configPath": "prettier.config.js",
+  "prettier.configPath": ".prettierrc",
   "prettier.jsxSingleQuote": true,
-  "prettier.prettierPath": "prettier.config.js",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "prettier.singleQuote": true,
+  "editor.columnSelection": true,
+  "editor.minimap.maxColumn": 80
 }
