--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,10 @@
   "prettier.jsxSingleQuote": true,
   "editor.formatOnSave": true,
   "prettier.singleQuote": true,
-  "editor.columnSelection": true,
+  "editor.columnSelection": false,
   "editor.minimap.maxColumn": 80,
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  }
 }
